[gd_scene load_steps=2 format=3 uid="uid://j4i1n0uorbwb"]

[ext_resource type="Script" path="res://components/checkpoint_setter.gd" id="1_bx8tj"]

[node name="checkpoint_setter" type="Area3D"]
script = ExtResource("1_bx8tj")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
